# autocut

./: .gitignore  Dockerfile  Dockerfile.cuda  README.md  setup.cfg  setup.py  tea.yaml
.github/workflows/: base.yml  ci.yml  faster-whisper  faster-whisper.yml  lint.yml
.streamlit/: config.toml
autocut/: __init__.py  cut.py  daemon.py  interface.py  main.py  package_transcribe.py  transcribe.py  transcribe_middleware.py  type.py  utils.py  whisper_model.py
autocut/interface/: README.md  interface.py  main.py
test/: config.py  test_cut.py  test_transcribe.py
test/content/: test001.srt  test001_md.md  test_md.md  test_srt.srt
test/media/: test002.mov
test/video/: test003.mkv  test004.flv
