[metadata]
name = autocut
version = attr: autocut.__version__
license = Apache Software License
description = 通过字幕来剪切视频
long_description = file: README.md
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.9
